refactor: 로또 숫자 객체 도입, 매직 넘버 상수 대체