@@ -2,9 +2,12 @@ package model;
 
 import static org.assertj.core.api.AssertionsForClassTypes.*;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Stream;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -13,27 +16,41 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 public class TicketTest {
 
-	private final LotteryWinningNumbers lotteryWinningNumbers =
-		new LotteryWinningNumbers(7, Arrays.asList(1, 2, 3, 4, 5, 6));
+	private LotteryWinningNumbers lotteryWinningNumbers;
+
+	@BeforeEach
+	void setUp() {
+		lotteryWinningNumbers = new LotteryWinningNumbers(
+			new LottoNumber(7),
+			List.of(
+				new LottoNumber(1),
+				new LottoNumber(2),
+				new LottoNumber(3),
+				new LottoNumber(4),
+				new LottoNumber(5),
+				new LottoNumber(6)
+			)
+		);
+	}
 
 	@Test
 	void ticketNumberCompared() {
-		Ticket leftTicket = new Ticket(1,2,3,4,5,6);
-		Ticket rightTicket = new Ticket(6,5,4,3,2,1);
+		Ticket leftTicket = createTicket(1,2,3,4,5,6);
+		Ticket rightTicket = createTicket(6,5,4,3,2,1);
 		assertThat(leftTicket.getNumbers()).isEqualTo(rightTicket.getNumbers());
 	}
 
 	@DisplayName("5개 일치 + 보너스 일치면 2등")
 	@Test
 	void secondLevelByFiveMatchesAndBonus() {
-		Ticket ticket = new Ticket(1, 2, 3, 4, 5, 7);
+		Ticket ticket = createTicket(1,2,3,4,5,7);
 		assertThat(ticket.getWinLevel(lotteryWinningNumbers)).isEqualTo(WinLevel.SECOND);
 	}
 
 	@DisplayName("5개 일치 + 보너스 불일치면 3등")
 	@Test
 	void thirdLevelByFiveMatchesWithoutBonus() {
-		Ticket ticket = new Ticket(1, 2, 3, 4, 5, 8);
+		Ticket ticket = createTicket(1,2,3,4,5,8);
 		assertThat(ticket.getWinLevel(lotteryWinningNumbers)).isEqualTo(WinLevel.THIRD);
 	}
 
@@ -46,10 +63,17 @@ public class TicketTest {
 
 	private static Stream<Arguments> ticketsAndExpectedLevels() {
 		return Stream.of(
-			Arguments.of(new Ticket(1, 2, 3, 4, 5, 6), WinLevel.FIRST),
-			Arguments.of(new Ticket(1, 2, 3, 4, 9, 8), WinLevel.FOURTH),
-			Arguments.of(new Ticket(1, 2, 3, 10, 9, 8), WinLevel.FIFTH),
-			Arguments.of(new Ticket(8, 9, 10, 11, 12, 13), WinLevel.LOSER)
+			Arguments.of(createTicket(1,2,3,4,5,6), WinLevel.FIRST),
+			Arguments.of(createTicket(1,2,3,4,9,8), WinLevel.FOURTH),
+			Arguments.of(createTicket(1,2,3,10,9,8), WinLevel.FIFTH),
+			Arguments.of(createTicket(8,9,10,11,12,13), WinLevel.LOSER)
 		);
+	}
+	private static Ticket createTicket(int... numbers) {
+		List<LottoNumber> lottoNumberList = new ArrayList<>();
+		for(int number: numbers) {
+			lottoNumberList.add(new LottoNumber(number));
+		}
+		return new Ticket(lottoNumberList);
 	}
 }
